--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -5,4 +5,8 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   position: relative;
+  flex-grow: 1;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  padding: 0 16px;
 }
