--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,7 +1,7 @@
 .header {
   padding: 45px 0 38px;
   margin: 0 auto;
-  max-width: calc(1280px - 2*200px);
+  max-width: 880px;
   min-height: 56px;
   border-bottom: 1px solid rgb(84, 84, 84, 0.7);
   box-sizing: border-box;
